--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
@@ -1,11 +1,35 @@
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-scale-multiple"
->
-  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
-</ngx-spinner>
+<div class="modal fade" id="modalPreference" tabindex="-1" role="dialog" aria-labelledby="modalPreferenceTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title centerTitleModal" id="modalPreferenceTitle">Corregir Inconsistencia Preference</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+        <div class="modal-body">
+          <div class="row" style="width: 100%; display: block; margin-bottom: 20px;">
+            <h5 class="text-center font-weight-500">¿ Esta seguro corregir las {{preferenceSelected.repeated}} inconsistencias de datos de la siguiente Preferencia ?</h5>
+            <h5 class="text-center font-weight-normal" >Id_Backup: {{preferenceSelected.id_backup}}</h5>
+          </div>
+          <div class="form">
+            <label for="key_name">Key_Name: </label>
+            <input type="text" class="form-control" id="key_name" [(ngModel)]="preferenceSelected.key_name" readonly>
+          </div>
+
+          <div class="form">
+            <label for="value">Value:</label>
+            <input type="text" class="form-control" id="value" [(ngModel)]="preferenceSelected.value" readonly>
+          </div>
+
+        </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="submit" class="btn btn-primary" (click)="corregirInconsistenciaRegistro()">Corregir</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="container text-center" *ngIf="preferencesService.Preferences.length == 0" style="margin-top: 200px;">
   <h2 class="font-weight-lighter">{{util.msj}}</h2>
@@ -30,7 +54,7 @@
       </th>
       <th scope="col" class="Encabezado-Tabla">Operación</th>
     </thead>
-    <tbody *ngIf="!preferencesService.isFilter()">
+    <tbody>
     <tr *ngFor="let preference of preferencesService.Preferences; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{preference.repeated}}</td>
@@ -38,7 +62,7 @@
       <td class="Celdas-Tabla">{{preference.key_name}}</td>
       <td class="Celdas-Tabla">{{preference.value}}</td>
       <td class="Celdas-Tabla">
-        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
+        <button type="button" class="btn btn-primary btn-Mnt-Inconsistencia" (click)="accionCorregirRegistro(preference, i)">
           <span>
             <fa-icon [icon]="util.faTools"></fa-icon>
           </span>
@@ -54,22 +78,6 @@
     </div>
     <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
     <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
-    </tbody>
-    <tbody *ngIf="preferencesService.isFilter()">
-    <tr *ngFor="let preference of preferencesService.preferencesFilter; let i = index" >
-      <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
-      <td class="Celdas-Tabla font-italic">{{preference.repeated}}</td>
-      <td class="Celdas-Tabla">{{preference.id_backup}}</td>
-      <td class="Celdas-Tabla">{{preference.key_name}}</td>
-      <td class="Celdas-Tabla">{{preference.value}}</td>
-      <td class="Celdas-Tabla">
-        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
-          <span>
-            <fa-icon [icon]="util.faTools"></fa-icon>
-          </span>
-        </button>
-      </td>
-    </tr>
     </tbody>
   </table>
 </div>
